[java11] update to Java 11
And get rid of dependencies that can now be removed